<resources>
    <string name="app_name">CinemaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error">Невозможно выполнить запрос</string>
    <string name="search">Поиск</string>
    <string name="enter_year">Введите год (2020, 2018-2020 и пр.)</string>
    <string name="enterRating">Введите рейтинг (7, 7.2-10 и пр.)</string>
    <string name="enterCountry">Введите страну (США, Россия и пр.)</string>
    <string name="Clear">Очистить</string>
    <string name="Apply">Применить</string>
    <string name="filters">Фильтры</string>
    <string name="Rating">Рейтинг: ★%1$s</string>
    <string name="genres">Жанры: %1$s</string>
    <string name="countries">Страны: %1$s</string>
    <string name="Posters">Постеры</string>
    <string name="actors">Актеры</string>
    <string name="Reviews">Отзывы</string>
</resources>