<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- AppBarLayout с CollapsingToolbarLayout и прозрачным тулбаром -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Изображение-постер фильма -->
            <ImageView
                android:id="@+id/imagePoster"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:scaleType="centerCrop"
                android:src="@drawable/image_placeholder"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/transparentToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:importantForAccessibility="no"
                    android:padding="16dp"
                    android:src="@drawable/arrow_back"
                    app:layout_collapseMode="pin"
                    app:tint="@color/primary" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                tools:text="Название фильма"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Описание фильма -->
            <TextView
                android:id="@+id/textDescription"
                style="@style/NormalText"
                tools:text="Описание"/>

            <TextView
                android:id="@+id/textRating"
                style="@style/NormalText"
                tools:text="Рейтинг"/>
            <!-- Жанр фильма -->
            <TextView
                android:id="@+id/textGenre"
                style="@style/NormalText"
                tools:text="Жанр фильма" />

            <!-- Страна производства -->
            <TextView
                android:id="@+id/textCountry"
                style="@style/NormalText"
                tools:text="Страны производства" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/Posters"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/posterRecView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:paddingHorizontal="32dp"
                android:clipToPadding = "false"
                tools:listitem="@layout/poster_list_item" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/actors"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actorRecView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:paddingHorizontal="32dp"
                android:clipToPadding = "false"
                tools:listitem="@layout/actor_list_item" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="16dp"
                android:text="@string/Reviews"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewRecView"
                android:layout_width="wrap_content"
                android:layout_height="700dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:paddingHorizontal="32dp"
                android:clipToPadding = "false"
                tools:listitem="@layout/review_item_list" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>